@@ -18,6 +18,8 @@
     <File name="EqualShouldHandleNullArgTest.cs" subtype="Code" buildaction="Compile" />
     <File name="ImplementingEqualsButNotGetHashCodeAndViceVersaTest.cs" subtype="Code" buildaction="Compile" />
     <File name="ToStringReturnsNullTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="ConstructorShouldNotCallVirtualMethodsTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="GetEntryAssemblyMayReturnNullTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Assembly" localcopy="True" refto="../../../../lib/Mono.Cecil.dll" />
